# TextAnalysis

./: CMakeLists.txt
src/: TextAnalysis.cpp  TextAnalysis.h  main.cpp
